k8s/database-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database-node
  template:
    metadata:
      labels:
        component: database-node
    spec:
      containers:
        - name: database-node
          image: snowd3n/permadeath-database-node
          ports:
            - containerPort: 80
