k8s/database-node-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-node-statefulset
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      component: database-node
  template:
    metadata:
      labels:
        component: database-node
    spec:
      containers:
        - name: database-node
          image: snowd3n/permadeath-database-node
          ports:
            - containerPort: 80
