k8s/zone-manager-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zone-manager-delpoyment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: zone-manager
  template:
    metadata:
      labels:
        component: zone-manager
    spec:
      containers:
        - name: zone-manager
          image: snowd3n/permadeath-zone-manager
          ports:
            - containerPort: 80
