k8s/zone-node-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zone-node-stateful-set
spec:
  serviceName: zone-node
  replicas: 1
  selector:
    matchLabels:
      component: zone-node
  template:
    metadata:
      labels:
        component: zone-node
    spec:
      containers:
        - name: zone-node
          image: snowd3n/permadeath-zone-node
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 1000m
