k8s/client-node-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: client-node
  ports:
    - port: 5002
      targetPort: 5002
