k8s/database-node-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-headless-service
spec:
  clusterIP: None
  selector:
    component: database-node
  ports:
    - port: 80
      targetPort: 80
