k8s/player-client-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: player-client-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: player-client
  ports:
    - port: 3000
      targetPort: 3000
