k8s/player-client-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: player-client-node-port
spec:
  type: NodePort
  selector:
    component: player-client
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3000
      targetPort: 3000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
