k8s/proxy-node-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-node-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: proxy-node
  ports:
    - port: 5002
      targetPort: 5002
