k8s/proxy-node-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: proxy-node-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: proxy-node
  ports:
    - port: 80
      targetPort: 80
