k8s/zone-manager-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: zone-manager-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: zone-manager
  ports:
    - port: 80
      targetPort: 80
