k8s/zone-node-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zone-node-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: zone-node
  ports:
    - port: 5001
      targetPort: 5001
