k8s/zone-node-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zone-node-headless-service
spec:
  clusterIP: None
  selector:
    component: zone-node
  ports:
    - port: 80
      targetPort: 80
